--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,5 @@
-@import 'reset.scss';
+@import 'normalize.scss';
 @import 'variables.scss';
 @import 'buttons.scss';
+@import 'modals.scss';
+@import 'mixins.scss';
