--- a/src/assets/scss/buttons.scss
+++ b/src/assets/scss/buttons.scss
@@ -41,25 +41,59 @@
 	}
 }
 
+.button.rounded {
+	@extend .btn;
+
+	border-radius: 50%;
+	height: 2.5rem;
+	width: 2.5rem;
+	padding: 0;
+	margin: 0 0 0 1rem;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	svg {
+		height: 1.5rem;
+	}
+}
+
 .button.violet {
 	@extend .btn;
 
 	border: 1px solid $violet;
 	color: $violet;
 
+	svg {
+		fill: $main-color;
+	}
+
 	&:hover {
 		border: 1px solid lighten($violet, 6%);
 		background-color: lighten($violet, 6%);
 		color: #FFF;
+
+		svg {
+			fill: #FFF;
+		}
 	}
 
 	&.filled {
 		background: $violet;
 		color: #FFF;
 		font-weight: 600;
-
+		
+		svg {
+			fill: #FFF;
+		}
+		
 		&:hover {
 			background: lighten($violet, 6%);
+
+			svg {
+				fill: lighten($violet, 6%);
+			}
 		}
 	}
 
