--- a/src/assets/scss/normalize.scss
+++ b/src/assets/scss/normalize.scss
@@ -11,6 +11,9 @@
  html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
 }
 
 /* Sections
